# uoverse

./: .gitignore  Cargo.toml  devenv.nix
ultimaonline-net/: Cargo.toml
ultimaonline-net/macros/: Cargo.toml
ultimaonline-net/macros/src/: lib.rs
ultimaonline-net/src/: compression.rs  de.rs  error.rs  lib.rs  packets.rs  ser.rs  types.rs
ultimaonline-net/src/packets/: action.rs  char_login.rs  char_select.rs  chat.rs  client_info.rs  entity.rs  gump.rs  housing.rs  login.rs  map.rs  mobile.rs  movement.rs  network.rs  world.rs
ultimaonline-net/src/types/: list.rs  movement.rs
ultimaonline-net/test/resources/: ServerList.pkt
uoverse-server/: Cargo.toml  NOTES.md
uoverse-server/macros/: Cargo.toml
uoverse-server/macros/src/: lib.rs
uoverse-server/src/: lib.rs
uoverse-server/src/game/: client.rs  server.rs
uoverse-server/src/game/client/: codecs.rs
uoverse-server/src/login/: client.rs
uoverse-tools/: Cargo.toml
uoverse-tools/src/: archive.rs  lib.rs  map.rs
uoverse-tools/src/archive/: uo_package.rs
