[package]
name = "uoverse-server"
version = "0.1.0"
authors = ["Charles Ellis <hamled@hamled.dev>"]
edition = "2018"

[dependencies]
bytes = "1"
futures = "0.3"
rand = "0.8.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7.3", features = ["codec"]}
ultimaonline-net = { version = "0.1.0", path = "../ultimaonline-net" }
uoverse-server-macros = { path = "macros" }
serde = { version = "1.0.119" }

[[bin]]
name = "login"
